--- a/Template/edit-member.html
+++ b/Template/edit-member.html
@@ -32,9 +32,19 @@
       <a id="brandname" class="navbar-brand" href="index.html">Koholo.com</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav"> 
             <li><a href="member-index.html">Mina sidor</a></li>
-        </ul>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Mina butiker<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Hantera butiker & produkter</a></li>
+            <li><a href="member-info.html">Produktimport</a></li>
+          </ul>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="Login.html"><span class="glyphicon glyphicon-log-out"></span> Logga ut</a></li>
+      </ul>
     </div>
   </div>
  </nav>
