--- a/Template/products.html
+++ b/Template/products.html
@@ -10,11 +10,12 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link rel="stylesheet" href="main1.css">
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     <script type="text/javascript" src="slick/slick.min.js"></script>
-</head>
     
+</head>
 <body>
     <div class="logga">
         <img id="logo" src="logo-koholo.png">
@@ -85,113 +86,136 @@
 
 <div id ="ProductWrapper" >
     
-             
+<div id="productModal" class="modal fade" role="dialog">
+  <div class="modal-dialog modal-lg">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+      <div class="modal-body">
+        <h3 class="productinfoheader">Jeans & Stuff</h3>
+        <p class="productinfo">Levi's</p>
+        <p>511 Slim Fit Evolution Creek</p>
+        <p class="productinfo">1099 :-</p>
+        
+        <img class="modalimage" src="byssor.jpg">
+          
+        <h4 class="descriptionheader">Beskrivning</h4>
+        <p class="productdescription">Ett par jeans med modern smal passform med utrymme för rörelse, en klassiker från och med nu. Dessa jeans sitter under midjan med en smal passform över höft och lår och smala ben.</p>
+          
+      </div>
+      <div class="modal-footer">
+          <button type="button" class="btn btn-success">Beställ</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+           
     
-   
-        <div class="ProductDiv col-md-2">
+        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/80APZS6SUS_89384197_front.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
         </div>
-        <div class="ProductDiv col-md-2">
+        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/82APFSMOHW_7310647180960_front.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
         </div>
-        <div class="ProductDiv col-md-2">
+        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
              <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/08APLS9SNS_89383827_front.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
         </div>
-        <div class="ProductDiv col-md-2">
+        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/83APKSWCL2_3114439055429_back.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
         </div>
-        <div class="ProductDiv col-md-2">
+        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
              <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/017922-0029.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
         </div>
-        <div class="ProductDiv col-md-2">
+        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/01APPOI6T7_5415212479394_711-Skinny-Jeans-Fair-Spirit_detail.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
         </div>
-        <div class="ProductDiv col-md-2">
+        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
              <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/227256-0426.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
         </div>
-        <div class="ProductDiv col-md-2">
+        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/42APO8EX4S_5415313111469_front.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
         </div>
-        <div class="ProductDiv col-md-2">
+        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
              <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/38APSO19RU_5415212219020_711-Skinny-Daytrip-Back_other.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
         </div>
-        <div class="ProductDiv col-md-2">
+        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/60AP382AOY_7340110928683_side.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
         </div>
-         <div class="ProductDiv col-md-2">
+         <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/018998-0001.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
         </div>
-        <div class="ProductDiv col-md-2">
+        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
             <div id = ""></div>
         </div>
-        <div class="ProductDiv col-md-2">
+        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
             <div id = ""></div>
         </div>
-        <div class="ProductDiv col-md-2">
+        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
             <div id = ""></div>
         </div>
-        <div class="ProductDiv col-md-2">
+        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
             <div id = ""></div>
         </div>
-        <div class="ProductDiv col-md-2">
+        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
             <div id = ""></div>
         </div>
-        <div class="ProductDiv col-md-2">
+        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
              <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/38APSO19RU_5415212219020_711-Skinny-Daytrip-Back_other.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
         </div>
-       <div class="ProductDiv col-md-2">
+       <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
              <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/38APSO19RU_5415212219020_711-Skinny-Daytrip-Back_other.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
-        </div>
-        
-        
+    </div> 
 
 </div>
-    
+    <script type="text/javascript" src="script.js"></script>
         
     <footer id="sidfot" class="footer">
         <p id="copyright">Presenteras av Koholo Shopping Network © 2016 koholo.com. Alla rättigheter förbehållna</p>
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
