--- a/Template/main.css
+++ b/Template/main.css
@@ -774,3 +774,262 @@ p {
 #member-readonly > .form-group > .col-sm-5 > input{
     margin-top: 5px;
 }
+
+.footer {
+    clear:both;
+    margin-top:5%;
+    width: 100%;
+    background-color: #f5f5f5;
+    display: block;
+    box-sizing: border-box;
+    text-align: center;
+    font-style: bold;
+    height: 5%;
+    font-size: 80%;
+}
+
+
+
+
+
+
+
+#filter{
+    width:100%;
+    float:left;
+   
+    
+    
+    
+}
+
+#filter>a{
+    
+    color:black;
+    
+    
+}
+
+#sfdiv{
+    
+    
+   height:100px;
+    
+    
+}
+
+#searchF{
+    
+    width:50%;
+    margin-left:25%;
+    
+    
+}
+
+
+
+html, body {
+    height: 100%;
+    width:100%;
+}
+
+
+#ProductWrapper{
+    
+    min-height: 85%;
+    margin-top:10px;
+    clear:both;
+ 
+}
+
+.ProductDiv{
+    height:300px;
+    width:16%;
+    border-radius:1%;
+    padding:2px;
+    margin-left:auto;
+    margin-right:auto;
+    display:block;
+    text-align: center;
+    float:left;
+    overflow:hidden;
+}
+
+.ProductDiv>img{
+    width:auto;
+    max-width:100%;
+    height: auto;
+    max-height:80%;
+    
+    
+}
+.ProductDiv:hover {
+    box-shadow:0px 0px 1px;
+}
+
+#ProductTitel,#ProductPrice{
+    
+   
+}
+
+.FilterRow{
+    
+    background-color:white;
+    
+    
+}
+
+@media screen and (min-width: 1265px) {
+    
+     
+    
+    #ProductWrapper{
+        
+        margin-left:4%;
+    
+
+ 
+}
+
+ 
+    
+    
+}
+
+
+@media screen and (max-width: 1265px) {
+    
+     
+    
+    .ProductDiv{
+        
+       
+        width:33%;
+      
+        
+        
+    }
+    
+   
+ 
+    
+    
+}
+
+
+
+
+
+@media screen and (max-width: 900px) {
+    
+
+    
+    
+    .ProductDiv{
+        
+       
+        width:50%;
+      
+        
+        
+    }
+    
+   
+    
+    
+    
+    
+}
+
+
+@media screen and (max-width: 415px) {
+    
+
+    
+    
+    
+    .ProductDiv{
+        
+       
+        width:100%;
+        margin-left:0;
+     
+        
+        
+    }
+    
+    
+       #ProductWrapper {
+        
+       
+    }
+    
+    
+    .ProductDiv>img{
+       
+    }
+    
+    
+    
+    
+    
+}
+
+
+/* dropdown-menu-style
+
+
+*/
+
+#dropcontainer{
+    margin-top:120px;
+    width:100%;
+    height:55px;
+ 
+ box-shadow: 0 10px 10px -10px;
+    
+}
+
+.dropbtn {
+    
+  background-color:#417C81;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown1 {
+    position: relative;
+    display: inline-block;
+    margin-left:5%;
+    float:left;
+    
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    
+}
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown1:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown1:hover .dropbtn {
+    background-color: #3e8e41;
+}
