--- a/Template/main.css
+++ b/Template/main.css
@@ -969,23 +969,21 @@ html, body {
 
 */
 
-#dropcontainer{
-    margin-top:120px;
-    width:100%;
-    height:55px;
- 
- box-shadow: 0 10px 10px -10px;
-    
-}
+
 
 .dropbtn {
     
-  background-color:#417C81;
+    background-color:#417C81;
     color: white;
-    padding: 16px;
+   
     font-size: 16px;
     border: none;
     cursor: pointer;
+    padding: 10px 15px;
+    border-bottom: 1px solid transparent;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+}
 }
 
 .dropdown1 {
@@ -1020,4 +1018,34 @@ html, body {
 
 .dropdown1:hover .dropbtn {
     background-color: #3e8e41;
+}
+
+#filtercontainer{
+    width:100%;
+    box-shadow: 0 10px 10px -10px;
+    
+}
+#dropcontainer{
+    
+width:121px;
+height:55px;
+clear:both;
+    
+}
+
+#advancefilterbar{
+    width:36%;
+    margin-left:32%;
+    padding:3px;
+    background-color:white;
+  
+    
+    
+}
+
+.panel-default>.panel-heading {
+    color: black;
+    background-color: white;
+    border-color: white;
+    
 }
