--- a/Template/products.html
+++ b/Template/products.html
@@ -9,7 +9,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-    <link rel="stylesheet" href="main1.css">
+
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
@@ -73,17 +73,67 @@
                     <button id ="searchbtn" class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
                 </span>
             </div>
+            <div class="panel-group" id = "advancefilterbar" >
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                        <a  href="#collapse1" data-toggle="collapse">Avancerad sökning</a>
+                        </h4>
+                    </div>
+                    <div id="collapse1" class="panel-collapse collapse">
+                      
+                        <div class="panel-footer">soon.jpg</div>
+                    </div>
+                </div>
+            </div>
         </div>
-<div id = "dropcontainer"><div class="dropdown1">
-  <button class="dropbtn">Filtrera efter:</button>
-  <div class="dropdown-content">
-    <a href="#">Bokstavsordning</a>
-    <a href="#">Pris</a>
-    <a href="#">Senast tillagd</a>
-  </div>
-</div>
-</div>
+    
+        
+    
 
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    <div class="container" id ="filtercontainer">
+        <div id = "dropcontainer">
+            <div class="dropdown1">
+                <button class="dropbtn">Filtrera efter:</button>
+                <div class="dropdown-content">
+                    <a href="#">Bokstavsordning</a>
+                    <a href="#">Pris</a>
+                    <a href="#">Senast tillagd</a>
+                </div>
+            </div>
+        </div>
+
+
+
+    </div>
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+
+    
+    
 <div id ="ProductWrapper" >
     
 <div id="productModal" class="modal fade" role="dialog">
