Skapat Lägga till butik
Skapat Lägga till butik mm i Medlems/Admin-sidorna

--- a/Template/Company.html
+++ b/Template/Company.html
@@ -66,9 +66,9 @@
         <ul>
             <li>Medverkan i en välbesökt shoppingportal</li>
             <li>Alla dina sidor är sökmotoroptimerade</li>
-            <li><span style="color:Red;">Obegränsat med produkter*</span></li>
-            <li><span style="color:Red;">Kontinuerlig autoinläsning av produkter*</span></li>
-            <li>Beställningar via mail/<span style="color:Red;">Länk till din egen produktsida*</span></li>
+            <li><span>Obegränsat med produkter*</span></li>
+            <li><span >Kontinuerlig autoinläsning av produkter*</span></li>
+            <li>Beställningar via mail/<span>Länk till din egen produktsida*</span></li>
             <li>Inga transaktionsavgifter</li>
             <li>Sökfunktion</li>
             <li>Användarvänligt webbaserat adminverktyg</li>
@@ -77,9 +77,10 @@
             <li>Möjlighet att skapa produktkategorier</li>
             <li>Obegränsad trafikmängd</li>
             <li>Daglig backup</li>
-            <li>E-post- & <span style="color:Red;">Telefonsupport*</span></li>
+            <li>E-post- & <span>Telefonsupport*</span></li>
+            <small class="text-muted"> *Utöver produktnivå BAS för privatpersoner </small>
         </ul>
-	<span style="color:Red;font-size:10px;">* Utöver produktnivå BAS för privatpersoner</span>
+	
     <h3>Priser för produktnivå PRO</h3>
 	   <p>3 år: 8 400 kr<br>2 år: 6 400 kr<br>1 år: 3 900 kr</p> <br>
 
