--- a/Template/member-index.html
+++ b/Template/member-index.html
@@ -37,7 +37,7 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Mina butiker<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Hantera butiker & produkter</a></li>
+            <li><a href="member-add-shop.html">Hantera butiker & produkter</a></li>
             <li><a href="member-info.html">Produktimport</a></li>
           </ul>
         </li>
