--- a/Template/member-info.html
+++ b/Template/member-info.html
@@ -37,7 +37,7 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Mina butiker<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Hantera butiker & produkter</a></li>
+            <li><a href="member-add-shop.html">Hantera butiker & produkter</a></li>
             <li><a href="member-info.html">Produktimport</a></li>
           </ul>
         </li>
@@ -51,12 +51,12 @@
     
     <div class="container">
         <div class="col-sm-10">
-            <h3 id="memberh2">Massimport av produkter (endast PRO)</h3>
+            <h3 class="memberh3">Massimport av produkter (endast PRO)</h3>
                 <p>Har du många produkter i din egen webbutik läser vi snabbt in dessa i din butik hos Koholo genom "Autoinläsning". För att göra detta behöver du skapa en exportfil med dina produkter, vilket är enkelt för den som byggt din webbutik. Många e-butiker har redan färdiga prisfiler till Pricerunner, Prisjakt med flera. Dessa filer fungerar även utmärkt för oss.</p>
         </div>
         
         <div class="col-sm-10">
-            <h3 id="memberh2">Så här funkar Autoinläsning</h3>
+            <h3 class="memberh3">Så här funkar Autoinläsning</h3>
                 <p>Hanteringen av dina exportfiler administrerar du i din egen webbutiks import/export-del där du även sparar exportprofilen i fall du vill göra om exporten. Du lägger sedan filen på din webbserver och meddelar oss sökvägen till denna. Vi läser sedan in alla dina produkter till din interna butik hos oss, vilket vi gör regelbundet i fall att du har uppdaterat filen.</p>
                 <p class="col-sm-9">Filnamnet på din exportfil kan exempelvis vara: Tillkoholo.php, TillKoholo.csv eller Tillkoholo.txt ..... 
 http//www.DinSida.se/Tillkoholo.php</p>
