--- a/Template/edit-member.html
+++ b/Template/edit-member.html
@@ -17,6 +17,7 @@
 </head>
     
 <body>
+    <div id="wrapper">
     <div class="logga">
         <img id="logo" src="logo-koholo.png">
     </div>
@@ -141,19 +142,29 @@
                     </div>
         </div>
 
-            <div class="form-group">
+            <div id="marginedit" class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                     <button type="submit" id="CreateButton" class="btn btn-default">Uppdatera Uppgifter</button>
                 </div>
             </div>
             </form>
         </div>
-        
-        
-    </div>
-   <footer id="sidfot" class="footer">
-        <p id="copyright">Presenteras av Koholo Shopping Network © 2016 koholo.com. Alla rättigheter förbehållna</p>
-    </footer>
+</div>
     <script src="script.js"></script>
 </body>
+    <footer class="footer">
+        <p id="copyright">Presenteras av Koholo Shopping Network © 2016 koholo.com. Alla rättigheter förbehållna</p>
+        
+        <div class="container">
+    <div class="text-center">
+                    <ul class="social-network social-circle">
+                        <li><a href="#" class="icoInsta" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+            </div>
+				</div>
+    </footer>
 </html>
