--- a/Template/index.html
+++ b/Template/index.html
@@ -17,6 +17,7 @@
 </head>
     
 <body>
+    <div id="wrapper">
     <div class="logga">
         <img id="logo" src="logo-koholo.png">
     </div>
@@ -51,12 +52,11 @@
     </div>
   </div>
  </nav>
-    
 
     <div class="container">
     <div class="row">
         <h1 id="searchhead">Sök efter produkter här...</h1>
-        <div class="col-xs-6 col-xs-offset-3">
+        <div class="col-md-6 col-md-offset-3">
 		    <div class="input-group">
                 <div class="input-group-btn search-panel">
                     <button type="button" id="categorybtn" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
@@ -138,7 +138,7 @@
             </div>
 </div>
 </div>
-    <div id="slides" class="container">
+    <div class="container text-center">
   <h3 class="popular">Populära produkter</h3>
       <div class="slider center col-md-10 col-md-offset-1">       
           <div class="slide">
@@ -163,7 +163,7 @@
       </div>
 </div>
     
-    <div class="container">
+    <div id="bottompop" class="container text-center">
   <h3 class="popular">Populära butiker</h3>
       <div class="slider center col-md-10 col-md-offset-1">       
           <div class="slide">
@@ -187,7 +187,11 @@
           
       </div>
 </div>
-<div class="container">
+        </div>
+    <footer class="footer">
+        <p id="copyright">Presenteras av Koholo Shopping Network © 2016 koholo.com. Alla rättigheter förbehållna</p>
+        
+        <div class="container">
     <div class="text-center">
                     <ul class="social-network social-circle">
                         <li><a href="#" class="icoInsta" title="Instagram"><i class="fa fa-instagram"></i></a></li>
@@ -198,10 +202,9 @@
                     </ul>
             </div>
 				</div>
-
-   <footer id="sidfot" class="footer">
-        <p id="copyright">Presenteras av Koholo Shopping Network © 2016 koholo.com. Alla rättigheter förbehållna</p>
     </footer>
+    
+        
     <script src="script.js"></script>
 </body>
 </html>
