--- a/Template/main.css
+++ b/Template/main.css
@@ -121,7 +121,7 @@ ul.social-network {
 ul.social-network li {
     text-align: center;
 	display: inline;
-	margin: 0 3px;
+	margin: 0 2px;
 }
 
 .social-network a.icoInsta:hover {
@@ -154,7 +154,6 @@ a.socialIcon:hover, .socialHoverClass {
 	display:inline-block;
 	position:relative;
 	margin:0 auto 0 auto;
-    margin-top: 3%;
 	-moz-border-radius:50%;
 	-webkit-border-radius:50%;
 	border-radius:50%;
@@ -257,6 +256,7 @@ a.socialIcon:hover, .socialHoverClass {
     text-align: center;
 }
 
+
 /*Färgstyle för navigationen*/
 #navigation {
     background-color: #417C81;
@@ -270,7 +270,7 @@ a.socialIcon:hover, .socialHoverClass {
 
 
 #copyright {
-    margin-top: 1%;
+    padding-top: 1%;
 }
 
 /*Style för rubrik, söka produkter*/
@@ -300,7 +300,7 @@ a.socialIcon:hover, .socialHoverClass {
     color: white;
     background-color: #417C81;
     border-color: #ccc;
-    width: 90%;
+    width: 100%;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     
@@ -402,6 +402,9 @@ a.socialIcon:hover, .socialHoverClass {
 }
 
 /* Jacob CSS för contact.html, bas-design ärvs från ovanstående*/
+#margincontact {
+    margin-bottom: 15%;
+}
 
 #contacth2{
     margin-bottom: 30px;
@@ -464,11 +467,6 @@ a.socialIcon:hover, .socialHoverClass {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-h4 {
-  font-size: 1.8rem;
-  font-weight: 300;
 }
 
 .lead {
@@ -694,7 +692,8 @@ p {
 }
 
 /* Jacob CSS för register.html, alignar text till vänster.*/
-@media (min-width: 768px){
+@media screen and (min-width: 768px){
+
     .form-horizontal .control-label {
         text-align: left;
 }
@@ -704,48 +703,48 @@ p {
     }
 }
 
-@media (max-width: 768px){
-    
-.modal-body > p, h3 {
-    width: 100%;
-    display: inline-block;
-}
-.modalimage {
-    position: static;
-    bottom: 0;
-    margin-top: 1%;
-    margin-bottom: 2%;
-    float: left;
-    width: 100%;
-}
+@media screen and (max-width: 768px){
 
-.productinfoheader {
-    font-family: 'Lobster', cursive;
-    font-size: 250%;
-
-}
-
-.productinfo {
-    font-weight: bold;
-    margin-bottom: 0;
-    font-size: 200%;
-}
-
-.productdescription {
-    font-size: 90%;
-}
-    .storedescription {
-        font-size: 100%;
-}
-
-    .storecategory {
-        font-size: 100%;
-}
-    
-    .storelink {
-       font-size: 100%; 
+    .modal-body > p, h3 {
+        width: 100%;
+        display: inline-block;
     }
-}
+    .modalimage {
+        position: static;
+        bottom: 0;
+        margin-top: 1%;
+        margin-bottom: 2%;
+        float: left;
+        width: 100%;
+    }
+
+    .productinfoheader {
+        font-family: 'Lobster', cursive;
+        font-size: 250%;
+
+    }
+
+    .productinfo {
+        font-weight: bold;
+        margin-bottom: 0;
+        font-size: 200%;
+    }
+
+    .productdescription {
+        font-size: 90%;
+    }
+        .storedescription {
+            font-size: 100%;
+    }
+
+        .storecategory {
+            font-size: 100%;
+    }
+
+        .storelink {
+           font-size: 100%; 
+        }
+    }
 
 
 /*Jacob CSS for member-index.html*/
@@ -764,16 +763,16 @@ p {
 }
 /*Style för footer*/
 .footer {
-    clear:both;
-    margin-top:5%;
+    position: fixed;
+    margin-top: 5%;
     width: 100%;
     background-color: #f5f5f5;
-    display: block;
     box-sizing: border-box;
     text-align: center;
-    font-style: bold;
-    height: 5%;
+    font-weight: bold;
+    height: 12%;
     font-size: 80%;
+    bottom: 0;
 }
 
 
@@ -814,10 +813,12 @@ p {
     
 }
 
+hmtl {
+    height: auto;
+}
 
-
-html, body {
-    height: 100%;
+body {
+    height: 88%;
     width:100%;
 }
 
@@ -867,109 +868,64 @@ html, body {
     
 }
 
+
 @media screen and (min-width: 1265px) {
-    
-     
     
     #ProductWrapper{
         
         margin-left:4%;
-    
 
- 
+    }
 }
-
- 
-    
-    
-}
-
 
 @media screen and (max-width: 1265px) {
-    
-     
-    
+
     .ProductDiv{
-        
-       
+
         width:33%;
-      
-        
-        
-    }
-    
-   
  
-    
-    
+    } 
 }
-
-
-
-
 
 @media screen and (max-width: 900px) {
     
-
-    
-    
     .ProductDiv{
-        
-       
-        width:50%;
-      
-        
-        
-    }
-    
-   
-    
-    
-    
-    
+
+        width:50%;    
+    }   
 }
 
 
 @media screen and (max-width: 415px) {
-    
 
+#searchbtn {
     
+    width: 70%;
     
+}
+    
+#wrapper {
+    height: 3000px;
+    }
+    
+body {
+      height: 80%;  
+    }
+    
+.footer {
+    height: 20%;
+}
+    
+    .popular {
+        margin-top: 15%;
+    }
     
     .ProductDiv{
         
-       
         width:100%;
         margin-left:0;
      
-        
-        
-    }
-    
-    
-       #ProductWrapper {
-        
-       
-    }
-    
-    
-    .ProductDiv>img{
-       
-    }
-    
-    
-    
-    
-    
 }
-
-
-/* dropdown-menu-style
-
-
-*/
-
-
 
 .dropbtn {
     
@@ -984,6 +940,7 @@ html, body {
     border-top-left-radius: 3px;
     border-top-right-radius: 3px;
 }
+    
 }
 
 .dropdown1 {
