--- a/Template/store.html
+++ b/Template/store.html
@@ -11,13 +11,10 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="main1.css">
-    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
 </head>
     
 <body>
+    <div id="wrapper">
     <div class="logga">
         <img id="logo" src="logo-koholo.png">
     </div>
@@ -56,7 +53,7 @@
         <img id="storelogo" src="logga_muboag.gif">
     </div>
 
-    <div class="col-xs-6 col-xs-offset-3">
+    <div class="col-xs-6 col-xs-offset-3 text-center">
         <h2 class="storedescription">Ridsport Online - Ridsportbutik | ridkläder, hästutrustning mm.</h2>
         <h3 class="storecategory">Sport & Fritid, Företag, Endast onlinebutik</h3>
         <h4 class="storelink"><a href="www.ridsportonline.se">www.ridsportonline.com</a></h4>
@@ -179,9 +176,21 @@
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
         </div>
-    
-   <footer id="sidfot" class="footer">
+    </div>
+   <footer class="footer">
         <p id="copyright">Presenteras av Koholo Shopping Network © 2016 koholo.com. Alla rättigheter förbehållna</p>
+        
+        <div class="container">
+    <div class="text-center">
+                    <ul class="social-network social-circle">
+                        <li><a href="#" class="icoInsta" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+            </div>
+				</div>
     </footer>
     <script src="script.js"></script>
 </body>
