--- a/Template/index.html
+++ b/Template/index.html
@@ -168,21 +168,27 @@
       <div class="slider center col-md-10 col-md-offset-1">       
           <div class="slide">
             <div class="cl cl-yellow"></div>
+              <p class="slidedesc"></p>
           </div>
           <div class="slide">
             <div class="cl cl-blue"></div>
+              <p class="slidedesc"></p>
           </div>
           <div class="slide">
             <div class="cl cl-red"></div>
+              <p class="slidedesc"></p>
           </div>
         <div class="slide">
             <div class="cl cl-yellow"></div>
+            <p class="slidedesc"></p>
           </div>
           <div class="slide">
             <div class="cl cl-blue"></div>
+              <p class="slidedesc"></p>
           </div>
           <div class="slide">
             <div class="cl cl-red"></div>
+              <p class="slidedesc"></p>
           </div>
           
       </div>
