--- a/Template/products.html
+++ b/Template/products.html
@@ -108,11 +108,22 @@
                 </span>
         </div>
 	</div>
+    
+        
 
 </div>
                   
-            <div class="col-md-2 col-md-offset-5" id = "advancedfilterbar" >
-                <div id="divpanel">
+          
+        
+</div>
+        
+          
+        
+        
+        
+        
+         <div  id = "advancedfilterbar" >
+                <div class="col-md-4 col-md-offset-4" id="divpanel">
                     <div class="panel-heading" id ="headpanel">
                         
                         <a  href="#collapse1" data-toggle="collapse">Visa/dölj utökad sökning</a>
@@ -120,14 +131,59 @@
                     </div>
                     <div id="collapse1" class="panel-collapse collapse">
                       
-                        <div class="panel-footer" id ="footpanel">soon.jpg</div>
+                        <div class="panel-footer" id ="footpanel">
+                            
+                            
+                            
+                        
+                            <select class="minidrops">
+                              <option>Ägare</option>
+                              <option>Option 1</option>
+                              <option>Option 2</option>
+                              <option>Option 3</option>
+                              <option>Option 4</option>
+                            </select>
+                                                    
+                            <select class="minidrops">
+                              <option>Butiker</option>
+                              <option>Option 1</option>
+                              <option>Option 2</option>
+                              <option>Option 3</option>
+                              <option>Option 4</option>
+                            </select>
+                                                    
+                            <select class="minidrops">
+                              <option>Länder</option>
+                              <option>Option 1</option>
+                              <option>Option 2</option>
+                              <option>Option 3</option>
+                              <option>Option 4</option>
+                            </select>
+
+
+
+
+
+
+                        
+                        
+                        
+                        
+                        
+                        
+                        
+                        
+                        
+                        
+                        
+                        
+                        
+                        
+                        
+                        </div>
                     </div>
                 </div>
-            </div>
-        
-</div>
-        
-        
+            </div>  
         
         
         
