--- a/Template/main.css
+++ b/Template/main.css
@@ -1030,8 +1030,10 @@ clear:both;
 }
 
 #advancedfilterbar{
-    width:auto;
+    
     margin-bottom:20px;
+    border-radius:5px;
+ 
 }   
 
 
@@ -1042,18 +1044,32 @@ font-size:12px;
 
 }
 
-.panel-default>.panel-heading {
-
-}
 
 #divpanel{
-  box-shadow:0px 0px 1px;
-   border-radius:2px;
+   
+   
     
 }
 
-#headpanel,footpanel{
-    
+
+#headpanel{
+    text-align:center;
     padding:5px;
+    
+}
+
+
+#footpanel{
+    text-align: center;
+    width:80%;
+    margin-left:10%;
+    height:35px;
+    background-color:white;
+        
+}
+.minidrops{
+
+    border-radius:3px;
+    width:30%;
     
 }
