--- a/Template/products.html
+++ b/Template/products.html
@@ -376,7 +376,7 @@
         </div>
     
         
-    <footer class="footer">
+    <footer id="footer">
         <p id="copyright">Presenteras av Koholo Shopping Network © 2016 koholo.com. Alla rättigheter förbehållna</p>
         
         <div class="container">
