--- a/Template/products.html
+++ b/Template/products.html
@@ -347,7 +347,7 @@
             <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
-            <div id = ""></div>
+            <div id = "Brand"></div>
         </div>
         <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
