--- a/Template/main.css
+++ b/Template/main.css
@@ -1097,3 +1097,18 @@ font-size:12px;
     width:30%;
     
 }
+
+
+
+
+#ProductPrice{
+ 
+    font-weight: bold;
+    
+}
+
+#Brand>img{
+   
+    height:15px;
+    
+}
